# calculator

./: .gitlab-ci.yml  CMakeLists.txt  calculator.cpp  calculator.h  test_calculator.cpp
.circleci/: config.yml
